--- a/_maps/snowy_forest.json
+++ b/_maps/snowy_forest.json
@@ -2,5 +2,8 @@
 	"version": 1,
 	"map_name": "Snowy Forest",
 	"map_path": "winter_ball_2021",
-	"map_file": "snowy_forest.dmm"
+	"map_file": "snowy_forest.dmm",
+	"traits": [{
+		"Baseturf": "/turf/open/floor/holofloor/snow"
+	}]
 }
